--- a/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/src/app/layout/components/sidebar/sidebar.component.scss
@@ -1,4 +1,5 @@
-$topnav-background-color: #222;
+$sidebar-background-color: #f1f3fa;
+
 .sidebar {
     border-radius: 0;
     position: fixed;
@@ -8,9 +9,9 @@ $topnav-background-color: #222;
     width: 235px;
     margin-left: -235px;
     border: none;
-    border-radius: 0;
+    border-right: 1px solid darken($sidebar-background-color,2%);
     overflow-y: auto;
-    background-color: $topnav-background-color;
+    background-color: $sidebar-background-color;
     bottom: 0;
     overflow-x: hidden;
     padding-bottom: 40px;
@@ -19,122 +20,68 @@ $topnav-background-color: #222;
     -ms-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
-    // border-top: 1px solid rgba(255,255,255,0.3);
+
     .list-group {
         a.list-group-item {
-            background: $topnav-background-color;
             border: 0;
             border-radius: 0;
-            color: #999;
             text-decoration: none;
+            background: transparent;
+            border-bottom: 1px solid darken($sidebar-background-color, 2%);
+
             .fa {
                 margin-right: 10px;
             }
         }
         a:hover {
-            background: darken($topnav-background-color, 5%);
-            color: #fff;
+            background: darken($sidebar-background-color, 4%);
         }
         a.router-link-active {
-            background: darken($topnav-background-color, 5%);
-            color: #fff;
-        }
-        .header-fields {
-            padding-top: 10px;
-        
-            > .list-group-item:first-child {
-                border-top: 1px solid rgba(255, 255, 255, 0.2);
-            }
-        }
-    }
-    .sidebar-dropdown {
-        *:focus {
-            border-radius: none;
-            border: none;
-        }
-        .panel-title {
-            font-size: 1rem;
-            height: 50px;
-            margin-bottom: 0;
-            a {
-                color: #999;
-                text-decoration: none;
-                font-weight: 400;
-                background: $topnav-background-color;
-                span {
-                    position: relative;
-                    display: block;
-                    padding: 0.75rem 1.5rem;
-                    padding-top: 1rem;
-                }
-            }
-            a:hover,
-            a:focus {
-                color: #fff;
-                outline: none;
-                outline-offset: -2px;
-            }
-        }
-        .panel-title:hover {
-            background: darken($topnav-background-color, 5%);
-        }
-        .panel-collapse {
-            border-radious: 0;
-            border: none;
-            .panel-body {
-                .list-group-item {
-                    border-radius: 0;
-                    background-color: $topnav-background-color;
-                    border: 0 solid transparent;
-                    a {
-                        color: #999;
-                    }
-                    a:hover {
-                        color: #fff;
-                    }
-                }
-                .list-group-item:hover {
-                    background: darken($topnav-background-color, 5%);
-                }
-            }
+            font-weight: bold;
         }
     }
 }
+
 .nested-menu {
     .list-group-item {
         cursor: pointer;
-    }
-    .nested {
-        list-style-type: none;
-    }
-    ul.submenu {
-        display: none;
-        height: 0;
-    }
-    & .expand {
-        ul.submenu {
-            display: block;
-            list-style-type: none;
-            height: auto;
-            li {
-                a {
-                    color: #fff;
-                    padding: 10px;
-                    display: block;
-                }
-            }
+
+        .menu-arrow {
+            font-size: 0.85em;
+            color: #757575;
+            float: right;
         }
+
+    }
+
+    .submenu {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+
+        .submenu-item {
+            text-decoration: none;
+            display: block;
+            padding: 0.75rem 1.25rem 0.75rem 4rem;
+            margin:0;
+            background: lighten($sidebar-background-color, 4%);
+        }
+        .submenu-item:hover {
+            background: darken($sidebar-background-color, 4%);
+            border-right: 4px solid #eaeaea;
+        }
+
     }
 }
+
+.border-active {
+    border-right: 2px solid darken($sidebar-background-color, 10%);
+}
+
 @media screen and (max-width: 992px) {
     .sidebar {
         top: 54px;
         left: 0px;
-    }
-}
-@media (min-width: 992px) {
-    .header-fields {
-        display: none;
     }
 }
 
